<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.intro.IntroActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/displayText"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/ivIllustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_task_list" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/get_started"
        android:textSize="@dimen/title2Text"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivIllustration" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/description"
        android:textColor="@color/gray"
        android:textSize="@dimen/bodyText"
        app:layout_constraintTop_toBottomOf="@id/tvGetStarted" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentPadding"
        android:layout_marginTop="@dimen/contentPadding"
        android:layout_marginEnd="@dimen/contentPadding"
        android:background="@drawable/ic_primary_button"
        android:text="@string/sign_in"
        android:textSize="@dimen/headlineText"
        android:textColor="@color/white"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/contentPadding"
        android:layout_marginTop="@dimen/contentPadding"
        android:layout_marginEnd="@dimen/contentPadding"
        android:background="@drawable/ic_secondary_button"
        android:text="@string/sign_up"
        android:textSize="@dimen/headlineText"
        android:textColor="@color/blue_primary"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>